# overseerr-sonarr

./: .env.sample  Cargo.toml  README.md
.github/workflows/: docker-publish.yml
.rhack/sonarr-0.1.0/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
.rhack/sonarr-0.1.0/docs/: AddSeriesOptions.md  AlternateTitleResource.md  ApiInfoApi.md  ApplyTags.md  AuthenticationApi.md  AuthenticationRequiredType.md  AuthenticationType.md  AutoTaggingApi.md  AutoTaggingResource.md  AutoTaggingSpecificationSchema.md  BackupApi.md  BackupResource.md  BackupType.md  BlocklistApi.md  BlocklistBulkResource.md  BlocklistResource.md  BlocklistResourcePagingResource.md  CalendarApi.md  CalendarFeedApi.md  CertificateValidationType.md  Command.md  CommandApi.md  CommandPriority.md  CommandResource.md  CommandResult.md  CommandStatus.md  CommandTrigger.md  CustomFilterApi.md  CustomFilterResource.md  CustomFormatApi.md  CustomFormatBulkResource.md  CustomFormatResource.md  CustomFormatSpecificationSchema.md  CutoffApi.md  DatabaseType.md  DelayProfileApi.md  DelayProfileResource.md  DiskSpaceApi.md  DiskSpaceResource.md  DownloadClientApi.md  (+164 more)
.rhack/sonarr-0.1.0/src/apis/: api_info_api.rs  authentication_api.rs  auto_tagging_api.rs  backup_api.rs  blocklist_api.rs  calendar_api.rs  calendar_feed_api.rs  command_api.rs  configuration.rs  custom_filter_api.rs  custom_format_api.rs  cutoff_api.rs  delay_profile_api.rs  disk_space_api.rs  download_client_api.rs  download_client_config_api.rs  episode_api.rs  episode_file_api.rs  (+53 more)
docker/: Dockerfile
src/: main.rs
(+136 files in other folders)
